--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "19.0.0",
     "react-dropzone": "^14.3.5",
     "react-intersection-observer": "^9.15.1",
+    "react-qr-code": "^2.0.15",
     "sonner": "^1.7.4",
     "zod": "^3.24.2"
   },
