--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "flag": "^5.0.1",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
