--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start"
   },
@@ -34,7 +34,7 @@
     "date-fns": "^3.6.0",
     "flag": "^5.0.1",
     "lucide-react": "^0.468.0",
-    "next": "latest",
+    "next": "15.2.0",
     "next-themes": "^0.4.3",
     "nuqs": "^2.3.2",
     "prettier": "^3.3.3",
@@ -49,12 +49,16 @@
   },
   "devDependencies": {
     "@types/node": "22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2"
+  },
+  "overrides": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
   }
 }
